--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "url": "https://github.com/J-Ymini/weekly-algorithm/issues"
   },
   "homepage": "https://github.com/J-Ymini/weekly-algorithm#readme",
-  "dependencies": {
+  "devDependencies": {
+    "@babel/core": "^7.17.5",
+    "@babel/preset-env": "^7.16.11",
+    "babel-jest": "^27.5.1",
     "jest": "^27.5.1"
   }
 }
